修正: フォーム投稿の案内文を削除

--- a/Turtle_Graphics_by_Python_02.ipynb
+++ b/Turtle_Graphics_by_Python_02.ipynb
@@ -458,6 +458,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "dis0hUtXblQF"
@@ -467,10 +468,6 @@
         "# ★ができましたか？\n",
         "さすが！あなたはたった数十分でコンピュータに何個も命令ができるようになったわけですね！\n",
         "めっちゃカッコいい❗❗😻😻😻😻\n",
-        "\n",
-        "ぜひあなたの作品を皆さんに共有してみてください！\n",
-        "\n",
-        "👉https://forms.office.com/Pages/ResponsePage.aspx?id=RZxMVaXXBUSJtCP4s7MsCCl976eBnelIieBxpi83jVpUODVJQ1NUVkszSDZDQkQyQjZYVzFPSEhTVi4u\n",
         "\n",
         "# 今回はここまで！\n",
         "もっといろんなことを試したい？ここはいつでも自由に使えますよ！"
