変更: 解答編リンクを追加、フォームURLリンクに変更

--- a/Turtle_Graphics_by_Python_06.ipynb
+++ b/Turtle_Graphics_by_Python_06.ipynb
@@ -117,11 +117,11 @@
         "\n",
         "ぜひあなたの作品を皆さんに共有してみてください！\n",
         "\n",
-        " 👉https://forms.office.com/Pages/ResponsePage.aspx?id=RZxMVaXXBUSJtCP4s7MsCCl976eBnelIieBxpi83jVpUODVJQ1NUVkszSDZDQkQyQjZYVzFPSEhTVi4u\n",
+        "👉[https://forms.office.com/Pages/ResponsePage.aspx?id=RZxMVaXXBUSJtCP4s7MsCCl976eBnelIieBxpi83jVpUODVJQ1NUVkszSDZDQkQyQjZYVzFPSEhTVi4u](https://forms.office.com/Pages/ResponsePage.aspx?id=RZxMVaXXBUSJtCP4s7MsCCl976eBnelIieBxpi83jVpUODVJQ1NUVkszSDZDQkQyQjZYVzFPSEhTVi4u)\n",
         "\n",
         "今回はここまで！\n",
         "\n",
-        "\n",
+        "解答は[こちら](https://colab.research.google.com/github/jtpedu/Python-by-Turtle-Graphics/blob/main/Turtle_Graphics_by_Python_06_Answer.ipynb)\n",
         "\n",
         "もっといろんなことを試したい？ここはいつでも自由に使えますよ！"
       ]
